--- a/VuetifySpa.Web/package.json
+++ b/VuetifySpa.Web/package.json
@@ -20,9 +20,9 @@
     "vuex": "^3.0.1",
     "vuex-router-sync": "^4.0.1",
     "vuetify": "^1.2.1",
-    "material-design-icons-iconfont": "^3.0.3"
 
-
+    "material-design-icons-iconfont": "^3.0.3",
+    "vue-progressive-image": "3.1.0"
 
   },
   "devDependencies": {
@@ -34,7 +34,6 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-2": "^6.18.0",
     "babel-register": "^6.18.0",
-    "bootstrap": "^4.1.3",
     "cross-env": "^3.1.3",
     "css-loader": "^0.26.1",
     "event-source-polyfill": "^0.0.7",
