--- a/VuetifySpa.Web/package.json
+++ b/VuetifySpa.Web/package.json
@@ -20,10 +20,9 @@
     "vuex": "^3.0.1",
     "vuex-router-sync": "^4.0.1",
     "vuetify": "^1.2.1",
-
     "material-design-icons-iconfont": "^3.0.3",
-    "vue-progressive-image": "3.1.0"
-
+    "vue-progressive-image": "^3.1.0",
+    "vuetify-upload-button": "^1.1.0"
   },
   "devDependencies": {
     "aspnet-webpack": "^2.0.1",
