--- a/VuetifySpa.Web/package.json
+++ b/VuetifySpa.Web/package.json
@@ -22,8 +22,8 @@
     "vuetify": "^1.2.1",
     "material-design-icons-iconfont": "^3.0.3",
     "vue-progressive-image": "^3.1.0",
-    "vuetify-upload-button": "^1.1.0"
-    
+    "vuetify-upload-button": "^1.1.0",
+    "vue-meta": "1.5.4"
   },
   "devDependencies": {
     "aspnet-webpack": "^2.0.1",
