--- a/VuetifySpa.Web/VuetifySpa.Web.csproj
+++ b/VuetifySpa.Web/VuetifySpa.Web.csproj
@@ -51,5 +51,9 @@
     <TypeScriptMapRoot />
     <TypeScriptSourceRoot />
   </PropertyGroup>
+  
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
+  </PropertyGroup>
 
 </Project>
