--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ VuetifySpa\.Web/wwwroot/img/avatar/
 VuetifySpa\.Web/Properties/PublishProfiles/FolderZip\.pubxml
 
 VuetifySpa\.Web/wwwroot/
+
+VuetifySpa\.Web/package-lock\.json
