--- a/VuetifySpa.Web/package.json
+++ b/VuetifySpa.Web/package.json
@@ -12,18 +12,19 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "vee-validate": "^2.0.0-rc.18",
-    "vue": "^2.5.10",
+    "vue": "2.5.21",
     "vue2-datepicker": "^1.8.2",
     "vue-router": "^2.1.1",
     "vue-server-renderer": "^2.1.8",
-    "vue-template-compiler": "^2.1.8",
+    "vue-template-compiler": "2.5.21",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^4.0.1",
-    "vuetify": "^1.2.1",
+    "vuetify": "1.3.14",
     "material-design-icons-iconfont": "^3.0.3",
     "vue-progressive-image": "^3.1.0",
     "vuetify-upload-button": "^1.1.0",
-    "vue-meta": "1.5.4"
+    "vue-meta": "1.5.4",
+    "file-saver": "2.0.0"
   },
   "devDependencies": {
     "aspnet-webpack": "^2.0.1",
@@ -40,7 +41,7 @@
     "extract-text-webpack-plugin": "^2.0.0-rc",
     "file-loader": "^0.9.0",
     "jquery": "3.3.1",
-    "node-sass": "^4.8.2",
+    "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^1.3.2",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.23.0",
