--- a/VuetifySpa.Data/VuetifySpa.Data.csproj
+++ b/VuetifySpa.Data/VuetifySpa.Data.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.1.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.1" />
+    <PackageReference Include="WkWrap.Core" Version="1.0.2" />
   </ItemGroup>
 
   <ItemGroup>
