--- a/VuetifySpa.Web/package.json
+++ b/VuetifySpa.Web/package.json
@@ -1,6 +1,7 @@
 {
   "version": "1.0.0",
   "name": "asp.net",
+  "author": "Aristov Nikolay <tneomichi@gmail.com>",
   "private": true,
   "scripts": {
     "dev": "cross-env ASPNETCORE_ENVIRONMENT=Development NODE_ENV=development dotnet run",
@@ -8,7 +9,7 @@
     "install": "webpack --config webpack.config.vendor.js"
   },
   "dependencies": {
-    "axios": "^0.15.3",
+    "axios": "^0.19.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "vee-validate": "^2.0.0-rc.18",
@@ -24,7 +25,10 @@
     "vue-progressive-image": "^3.1.0",
     "vuetify-upload-button": "^1.1.0",
     "vue-meta": "1.5.4",
-    "file-saver": "2.0.0"
+    "file-saver": "2.0.0",
+    "@progress/kendo-ui": "2018.3.1219",
+    "@progress/kendo-grid-vue-wrapper": "2018.3.1129-dev.1130",
+    "@progress/kendo-datasource-vue-wrapper": "^2018.3.1025"
   },
   "devDependencies": {
     "aspnet-webpack": "^2.0.1",
@@ -40,7 +44,7 @@
     "event-source-polyfill": "^0.0.7",
     "extract-text-webpack-plugin": "^2.0.0-rc",
     "file-loader": "^0.9.0",
-    "jquery": "3.3.1",
+    "jquery": "^3.4.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^1.3.2",
     "sass-loader": "^4.1.1",
